# macu-studio

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile  NOTICE.md  README.md  SECURITY.md  build_srt_aligned.py  interpolate_masters.py  lib.py  run.py  stackchan.py  stage_1_vo.py  stage_2_masters.py  stage_4_assemble.py  stage_5_music.py  stage_6_whisper.py  stage_7_srt.py  stage_8_burn.py
studio/: README.md  pyproject.toml  shows.json
studio/backend/macu_studio/: activity.py  agen.py  assets.py  cardgen.py  characters.py  chat.py  comfy_stills.py  compgen.py  config.py  corpus.py  cowork_jobs.py  docs.py  emergency.py  engines.py  episodes.py  events.py  gen_manifest.py  gitsync.py  hfcache.py  higgsfield.py  hyperframes.py  llm.py  main.py  manifest.py  mcp_server.py  media.py  models.py  pipeline.py  prompts.py  publish.py  regen.py  remote_render.py  routes_assets.py  routes_characters.py  routes_cowork.py  routes_diag.py  routes_docs.py  routes_engines.py  routes_gitsync.py  routes_graphics.py  (+29 more)
studio/demo/: inject.html  sw.js
studio/demo/fly/: Dockerfile  default.conf  fly.toml
studio/frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
studio/frontend/src/: api.ts  app.tsx  hooks.ts  main.tsx  mediaCache.ts  route.ts  store.ts  theme.ts  themes.css  tokens.css  tour.ts  types.ts
studio/frontend/src/api/: assets.ts  cowork.ts  (+15 more)
studio/scripts/: build_demo.sh  gen_demo_fixtures.py  install.sh  rename_episodes.py
studio/systemd/: macu-studio.service
(+289 files in other folders)
