[project]
name = "macu-studio"
# Fallback only — the running app derives its version from the nearest git release
# tag (version.release()); this is what tag-less installs report. Bumped at releases.
version = "0.3.3"
description = "Local production dashboard for the MACU Report pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "python-multipart>=0.0.12",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "mcp>=1.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["backend"]
